Add dumping values for select elements

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div id="editor">
             <div class="structure-element" id="title" hidden>
                 <div class="editor-element">
-                    <select class="dropdown" onchange="changeTitleType(event);upd();" style="width: 100%; margin: 0;">
+                    <select class="dropdown" onchange="dumpSelectValue();changeTitleType(event);upd();" style="width: 100%; margin: 0;">
                         <!--<option name="masterDissertation">Магистерская диссертация</option>
                         <option name="diplomaProject">Дипломный проект</option>
                         <option name="diplomaWork">Дипломная работа</option>
