--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
         <link rel="stylesheet" type="text/css" href="styles/editor.css">
         <link rel="stylesheet" type="text/css" href="styles/table-editor.css">
         <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js"></script>
+        <script src="https://unpkg.com/docx@6.0.0/build/index.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/1.3.8/FileSaver.js"></script>
         <script src="./scripts/font_metrics.js"></script>
         <script src="./scripts/templates.js"></script>
         <script src="./scripts/editor.js"></script>
         <script src="./scripts/assembler.js"></script>
         <script src="./scripts/preview.js"></script>
+        <script src="./scripts/docxgen.js"></script>
     </head>
     <body>
         <iframe id="preview" src="./preview.html">
