Add source reorder

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                             <rect x="34.1171" y="40.3065" width="30" height="3" transform="rotate(-90 34.1171 40.3065)" fill="#858585"/>
                         </svg>
                     </div>
-                    <div class="source-button" title="Переупорядочить источники в порядке упоминания">
+                    <div class="source-button" onclick="reorder();upd();" title="Переупорядочить источники в порядке упоминания">
                         <svg width="71" height="51" viewBox="0 0 71 51" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <rect x="0.617142" y="0.306488" width="70" height="50" rx="5" fill="white"/>
                             <path d="M47.6171 25.3065L23.6171 13.3065" stroke="#858585" stroke-width="2"/>
