--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<!--- just simple example -->
 <html>
     <head>
         <meta charset="utf-8">
+        <title>Конструктор отчетов по СТО</title>
         <link rel="stylesheet" type="text/css" href="styles/page.css">
         <link rel="stylesheet" type="text/css" href="styles/editor.css">
         <link rel="stylesheet" type="text/css" href="styles/table-editor.css">
+        <link rel="icon" href="/favicon.svg">
         <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js"></script>
         <script src="https://unpkg.com/docx@6.0.0/build/index.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/1.3.8/FileSaver.js"></script>
@@ -201,7 +202,7 @@
             </div>
         </div>
         <div id="header">
-            <select class="dropdown" id="dropdown-select-structure-element" style="margin-left: 0;"
+            <select class="dropdown" id="dropdown-select-structure-element" style="margin-left: 2rem;"
             onchange="changeStructureElement(this.selectedOptions[0].getAttribute('name'));">
                 <option name="title">Титульный лист</option>
                 <!---<option name="essay">Реферат</option>-->
@@ -211,12 +212,22 @@
                 <option name="abbr-list">Список сокращений</option>
                 <option name="source-list">Список источников</option>
             </select>
-            <div id="download-button">.DOCX⤓</div>
+            <div style="width: 30%; display: flex; justify-content: space-around;">
+                <svg id="download-button" width="31" height="31" viewBox="0 0 31 31" fill="none" xmlns="http://www.w3.org/2000/svg"><rect x="5.2085" y="23.8071" width="20" height="1.87101" fill="#808080"/><rect x="14.3085" y="25.6781" width="20" height="1.8" transform="rotate(-90 14.3085 25.6781)" fill="#808080"/><rect x="14.3085" y="23.0115" width="7.2" height="1.6" transform="rotate(-30 14.3085 23.0115)" fill="#808080"/><rect x="9.07309" y="20.7971" width="1.6" height="7.2" transform="rotate(-60 9.07309 20.7971)" fill="#808080"/><rect x="0.708496" y="1.17809" width="29" height="29" rx="4.5" stroke="#808080"/></svg>
+            </div>
         </div>
         <div id="add-source" hidden>
             <textarea id="search-source" rows='1' onkeydown="handleSourceSearchKeyDown();" oninput="fillSearchBlock();" onblur="finishSourceSearch();"></textarea>
             <div id="search-block"></div>
             <div id="add-source-tooltip">Выбрать:<code>Enter</code> Отмена:<code>Esc</code></div>
+        </div>
+        <div id="help" data-version="2" hidden>
+            <div class="help-block" style="display: flex; align-content: space-around; flex-wrap: wrap; justify-content: center; color: grey">
+                <div style="font-size: 1.7rem;">Конструктор отчетов по СТО</div>
+                <div style="font-size: 1.2rem;">При помощи данного сервиса вы сможете легко создавать отчеты и другие документы учебной деятельности. Не заботьтесь об оформлении - оно будет установлено автоматически.</div>
+                <div class="help-tooltip">Добавляйте и настраивайте элементы в панели слева. Справа будет отображаться предпросмотр файла docx.</div>
+                <div class="help-button-start" onclick="hideTip();">Приступить к работе</div>
+            </div>
         </div>
     </body>
 </html>
