--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" type="text/css" href="styles/page.css">
         <link rel="stylesheet" type="text/css" href="styles/editor.css">
         <link rel="stylesheet" type="text/css" href="styles/table-editor.css">
-        <link rel="icon" href="/favicon.svg">
+        <link rel="shortcut icon" href="favicon.svg?">
         <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js"></script>
         <script src="https://unpkg.com/docx@6.0.0/build/index.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/1.3.8/FileSaver.js"></script>
